--- a/Desktop/netflix-gpt/src/index.css
+++ b/Desktop/netflix-gpt/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;  /* Hide scrollbar for Chrome, Safari, and Edge */
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none;  /* Hide scrollbar for IE and Edge */
+    scrollbar-width: none;  /* Hide scrollbar for Firefox */
+}
